--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
     
     
@@ -103,6 +103,18 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        
+        <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-surefire-plugin</artifactId>
+     <version>3.0.0-M5</version>
+     <configuration>
+      <suiteXmlFiles>
+       <suiteXmlFile>testng.xml</suiteXmlFile>
+      </suiteXmlFiles>
+     </configuration>
+    </plugin>
+        
       </plugins>
     </pluginManagement>
   </build>
